--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "next": "13.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-split": "^2.0.14",
+    "react-tilt": "^1.0.2",
     "recma-import-images": "0.0.3",
     "remark-gfm": "^3.0.1",
     "remark-rehype-wrap": "0.0.3",
