--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.7",
+    "camera-controls": "^2.7.3",
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
     "framer-motion": "^10.15.2",
+    "gsap": "^3.12.2",
     "next": "13.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,13 +34,17 @@
     "remark-unwrap-images": "^3.0.1",
     "shiki": "^0.11.1",
     "tailwindcss": "^3.3.2",
+    "three": "^0.158.0",
     "unified-conditional": "0.0.2"
   },
   "devDependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.4.16",
+    "file-loader": "^6.2.0",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2",
-    "sharp": "^0.32.0"
+    "raw-loader": "^4.0.2",
+    "sharp": "^0.32.0",
+    "webpack-cli": "^5.1.4"
   }
 }
