--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@next/mdx": "13.4.16",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
-    "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
     "framer-motion": "^10.15.2",
     "next": "13.4.16",
+    "next-sanity": "^5.5.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.2",
@@ -33,15 +33,18 @@
     "remark-gfm": "^3.0.1",
     "remark-rehype-wrap": "0.0.3",
     "remark-unwrap-images": "^3.0.1",
+    "sanity": "^3.19.1",
     "shiki": "^0.11.1",
-    "tailwindcss": "^3.3.2",
     "unified-conditional": "0.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "8.26.0",
     "eslint-config-next": "13.4.16",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "tailwindcss": "^3.3.5"
   }
 }
