--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "13.4.16",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
+    "animejs": "^3.2.1",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
