--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
-    "framer-motion": "^10.15.2",
-    "next": "13.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "framer-motion": "^10.16.4",
+    "next": "^13.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-glow": "^1.0.0",
     "react-split": "^2.0.14",
