--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@sanity/image-url": "^1.0.2",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
-
     "animejs": "^3.2.1",
     "autoprefixer": "^10.4.7",
-
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
