event data mapped

--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@codaworks/react-glow": "^1.0.3",
     "@leafac/rehype-shiki": "^2.2.1",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@sanity/image-url": "^1.0.2",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
-
     "animejs": "^3.2.1",
     "autoprefixer": "^10.4.7",
-
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
@@ -30,7 +28,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.2",
-    "react-glow": "^1.0.0",
     "react-split": "^2.0.14",
     "react-tilt": "^1.0.2",
     "recma-import-images": "0.0.3",
