--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.4",
     "eslint": "8.26.0",
     "eslint-config-next": "13.4.16",
     "postcss": "^8.4.31",
