--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@sanity/client": "^6.7.1",
     "@sanity/image-url": "^1.0.2",
     "acorn": "^8.10.0",
     "acorn-jsx": "^5.3.2",
