--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "watch": "./node_modules/.bin/webpack --watch --config webpack.dev.js"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@leafac/rehype-shiki": "^2.2.1",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "13.4.16",
+    "@next/mdx": "^13.4.16",
     "@react-hook/mouse-position": "^4.1.3",
     "@sanity/client": "^6.7.1",
     "@sanity/image-url": "^1.0.2",
@@ -24,6 +25,7 @@
     "clsx": "^1.2.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.2.12",
+    "file-loader": "^6.2.0",
     "framer-motion": "^10.15.2",
     "next": "13.4.16",
     "next-sanity": "^5.5.10",
