--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fast-glob": "^3.2.12",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.15.2",
+    "gsap": "^3.12.2",
     "next": "13.4.16",
     "next-sanity": "^5.5.10",
     "react": "18.2.0",
